Main logo z-index bug fixed

--- a/less/style.less
+++ b/less/style.less
@@ -372,7 +372,7 @@ img:hover .hover1:after {
     position: absolute;
     top: 100px;
     left: 100px;
-    z-index: 9999;
+    z-index: 3;
 }
             
 
